--- a/CopyFolder/Homepage - Copy.html
+++ b/CopyFolder/Homepage - Copy.html
@@ -11,36 +11,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="Images/ADGC_logo.png" />
     <link rel="h" type="image/x-icon" href="Images/ADGC_logo.png" />
-    <link rel="stylesheet" type="text/css" href="master.css">
-    <title>Events AGDC</title>
-    <!--Script Classes-->
-        <style>
-            .topButton {
-                display: none;
-                position: fixed;
-                bottom: 20px;
-                right: 30px;
-                z-index: 99;
-                font-size: 18px;
-                font-family: 'Open Sans', sans-serif;
-                font-weight: bold;
-                outline: none;
-                background-color: #cccccc;
-                color: black;
-                cursor: pointer;
-                padding: 15px;
-                border: 3px solid black;
-            }
+    <link rel="stylesheet" type="text/css" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/master.css">
+    <title>Animation & Game Design Club</title>
+    <style>
 
-            .topButton:hover {
-                background-color:white;
-                border: 3px solid black;
-                color:  black;
-            }
-        </style>
+    </style>
+    <!--Script Classes-->
+    <style>
+        .topButton {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            right: 30px;
+            z-index: 99;
+            font-size: 18px;
+            font-family: 'Open Sans', sans-serif;
+            font-weight: bold;
+            outline: none;
+            background-color: #cccccc;
+            color: black;
+            cursor: pointer;
+            padding: 15px;
+            border: 3px solid black;
+        }
+
+        .topButton:hover {
+            background-color:white;
+            border: 3px solid black;
+            color:  black;
+        }
+    </style>
     <!--Script Classes-->
 </head>
 <body>
+
 <!--||||||||||||||||||||||||||||||||||||||||||||||||||||||HEADER |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
 <div class="container-fluid Header " >
     <div class="row">
@@ -90,11 +94,11 @@
 </div>
 
 <div class="d-flex stay  navbarBack ">
-    <a class=" navColor" href="Homepage.html" style="text-decoration: none;">Home</a>
-    <a class=" navColor" href="EventsPage.html " style="text-decoration: none;">Events</a>
-    <a class=" navColor" href="ProjectsPage.html" style="text-decoration: none;">Projects</a>
-    <a class=" navColor" href="ConstitutionPage.html  " style="text-decoration: none;">Constitution</a>
-    <a class=" navColor flex-grow-1" href="ContactUs.html " style="text-decoration: none;">Contact Us</a>
+    <a class=" navColor" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/Homepage.html" style="text-decoration: none;">Home</a>
+    <a class=" navColor" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/EventsPage.html " style="text-decoration: none;">Events</a>
+    <a class=" navColor" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ProjectsPage.html" style="text-decoration: none;">Projects</a>
+    <a class=" navColor" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ConstitutionPage.html  " style="text-decoration: none;">Constitution</a>
+    <a class=" navColor flex-grow-1" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ContactUs.html " style="text-decoration: none;">Contact Us</a>
 
     <div class="container-fluid showSmall mobileNavBack m-0 p-0">
         <div class="row m-0 p-0">
@@ -103,17 +107,17 @@
                     <div class="row">
                         <div class="col-6">
                             <button type="button" class=" mobileNavButton dropdown-toggle" data-toggle="dropdown">
-                                <i  class="fas fa-bars"></i>
+                               <i  class="fas fa-bars"></i>
                             </button>
                             <div class="dropdown-menu dropdownNav">
-                                <a class="dropdown-item itemNav" href="EventsPage.html">Events</a>
-                                <a class="dropdown-item itemNav" href="ProjectsPage.html">Projects</a>
-                                <a class="dropdown-item itemNav" href="ConstitutionPage.html">Constitution</a>
-                                <a class="dropdown-item itemNav" href="ContactUs.html">Contact Us</a>
+                                <a class="dropdown-item itemNav" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/EventsPage.html">Events</a>
+                                <a class="dropdown-item itemNav" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ProjectsPage.html">Projects</a>
+                                <a class="dropdown-item itemNav" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ConstitutionPage.html">Constitution</a>
+                                <a class="dropdown-item itemNav" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ContactUs.html">Contact Us</a>
                             </div>
                         </div>
                         <div class="col-6 ">
-                            <a style="text-decoration: none;" href="Homepage.html"><i class="fa fa-home homeIcon"></i></a>
+                           <a style="text-decoration: none;" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/Homepage.html"><i class="fa fa-home homeIcon"></i></a>
                         </div>
                     </div>
                 </div>
@@ -123,30 +127,43 @@
 
 </div>
 
-<!--||||||||||||||||||||||||||||||||||||||||||||||||||||||HEADER |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
 
+<!--||||||||||||||||||||||||||||||||||||||||||||||||||||||HEADER |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
 
 <div class="container-fluid background-box">
     <div class="row">
         <div class="col-12">
             <div class=" container">
                 <div class="row">
-                    <div class="col-12 bodyBox text-center EventTitle">
-                        <div class="messageBox">
-                            <h1><a style="text-decoration: none;" href="#events">AGDC Events</a></h1>
-                            <img class="img-fluid" src="Images/KentStateBackground.jpg">
+                    <div class="col-12">
+                        <div class="row bodyBox">
+                            <div class="col-12 messageBox">
+                                <div class=" text-center EventTitle">
+                                    <h1>Meetings at 7pm in the Mac Annex room 241!</h1>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-12 bodyBox lastBox">
-                        <div class="messageBox">
-                            <ul> <h2>Fall Semester</h2>
-                                <li id="events"><a style="text-decoration: none;"  href="#GDEX">GDEX</a> (OCT 11TH-13TH, 2019) <a style="text-decoration: none;"href="https://www.thegdex.com/">   Official Site</a></li>
-                            </ul>
-
-                            <ul> <h2>Spring Semester</h2>
-                                <li><a style="text-decoration: none;" href="#GGJ">Global Game Jam </a> (JAN 31 - FEB 2, 2020)<a style="text-decoration: none;"href="https://globalgamejam.org/">   Official Site</a></li>
-                                <li><a style="text-decoration: none;" href="VEC">Vector</a> (APR 26-27, 2020) <a style="text-decoration: none;"href="http://vectorconf.com/">   Official Site</a></li>
-                            </ul>
+                    <div class="col-12">
+                        <div class="row bodyBox lastBox">
+                            <div class="col-12 messageBox">
+                                <div class=" text-center EventTitle">
+                                    <h1><a style="text-decoration: none;" href="#register">REGISTER:</a></h1>
+                                    <img class="img-fluid justify-content-center" src="Images/ggj20_news_708x432px.jpg">
+                                </div>
+                                <div style="margin-top: 30px;" class="row">
+                                    <div class="col-12  text-center">
+                                        <h2 id="register">Step 1:</h2>
+                                        <p>Register for the Jam on their site.</p>
+                                        <a href="https://globalgamejam.org/2020/jam-sites/kent-state-university-kent-campus">Game Jam Site</a>
+                                    </div>
+                                    <div style="margin-top: 30px;" class="col-12  text-center">
+                                        <h2>Step 2:</h2>
+                                        <p>Register for our University</p>
+                                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScWm6NNMWum5wHpvkQDzxuG7h6hkaSu3RslOcN1gXll9Q3Jaw/viewform?vc=0&c=0&w=1">Google Form</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -154,7 +171,6 @@
         </div>
     </div>
 </div>
-
 
 <!--|||||||||||||||||||||||||||||||||||||||FOOOTER||||||||||||||||||||||||||||||||||||||||||||||||||-->
 <div class="container-fluid footer">
@@ -163,7 +179,7 @@
             <div class="container footerBox">
                 <div class="row">
                     <div class="col-12 text-center footertext">
-                        <span><a class="footertext" style="text-decoration: none;" href="ConstitutionPage.html">About Us </a><span>|</span> <a class="footertext" style="text-decoration: none;" href="ContactUs.html">Contact Us</a></span>
+                        <span><a class="footertext" style="text-decoration: none;" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ConstitutionPage.html">About Us </a><span>|</span> <a class="footertext" style="text-decoration: none;" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ContactUs.html">Contact Us</a></span>
                     </div>
                 </div>
             </div>
@@ -171,8 +187,7 @@
     </div>
 </div>
 <!--|||||||||||||||||||||||||||||||||||||||FOOOTER||||||||||||||||||||||||||||||||||||||||||||||||||-->
-
-<button  class="topButton" onclick="topFunction()" class="topButton" id="myBtn" title="Go to top">Back to Top</button>
+<button class="topButton" onclick="topFunction()" class="topButton" id="myBtn" title="Go to top">Back to Top</button>
 <script>
     // When the user scrolls down 20px from the top of the document, show the button
     window.onscroll = function () {
@@ -193,5 +208,6 @@
         document.documentElement.scrollTop = 0;
     }
 </script>
+
 </body>
 </html>
