--- a/CopyFolder/ConstitutionPage - Copy.html
+++ b/CopyFolder/ConstitutionPage - Copy.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="Images/ADGC_logo.png" />
     <link rel="h" type="image/x-icon" href="Images/ADGC_logo.png" />
-    <link rel="stylesheet" type="text/css" href="master.css">
+    <link rel="stylesheet" type="text/css" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/master.css">
     <title>Constitution AGDC</title>
     <style>
         .dropDown {
@@ -111,11 +111,11 @@
 </div>
 
 <div class="d-flex stay  navbarBack ">
-    <a class=" navColor" href="Homepage.html" style="text-decoration: none;">Home</a>
-    <a class=" navColor" href="EventsPage.html " style="text-decoration: none;">Events</a>
-    <a class=" navColor" href="ProjectsPage.html" style="text-decoration: none;">Projects</a>
-    <a class=" navColor" href="ConstitutionPage.html  " style="text-decoration: none;">Constitution</a>
-    <a class=" navColor flex-grow-1" href="ContactUs.html " style="text-decoration: none;">Contact Us</a>
+    <a class=" navColor" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/Homepage.html" style="text-decoration: none;">Home</a>
+    <a class=" navColor" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/EventsPage.html " style="text-decoration: none;">Events</a>
+    <a class=" navColor" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ProjectsPage.html" style="text-decoration: none;">Projects</a>
+    <a class=" navColor" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ConstitutionPage.html  " style="text-decoration: none;">Constitution</a>
+    <a class=" navColor flex-grow-1" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ContactUs.html " style="text-decoration: none;">Contact Us</a>
 
     <div class="container-fluid showSmall mobileNavBack m-0 p-0">
         <div class="row m-0 p-0">
@@ -127,14 +127,14 @@
                                 <i  class="fas fa-bars"></i>
                             </button>
                             <div class="dropdown-menu dropdownNav">
-                                <a class="dropdown-item itemNav" href="EventsPage.html">Events</a>
-                                <a class="dropdown-item itemNav" href="ProjectsPage.html">Projects</a>
-                                <a class="dropdown-item itemNav" href="ConstitutionPage.html">Constitution</a>
-                                <a class="dropdown-item itemNav" href="ContactUs.html">Contact Us</a>
+                                <a class="dropdown-item itemNav" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/EventsPage.html">Events</a>
+                                <a class="dropdown-item itemNav" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ProjectsPage.html">Projects</a>
+                                <a class="dropdown-item itemNav" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ConstitutionPage.html">Constitution</a>
+                                <a class="dropdown-item itemNav" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ContactUs.html">Contact Us</a>
                             </div>
                         </div>
                         <div class="col-6 ">
-                            <a style="text-decoration: none;" href="Homepage.html"><i class="fa fa-home homeIcon"></i></a>
+                            <a style="text-decoration: none;" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/Homepage.html"><i class="fa fa-home homeIcon"></i></a>
                         </div>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
                         <h3 class="float-right">Constitution</h3>
                     </div>
                     <div class="col-5">
-                        <p class="float-right"><a style="color: white;" href="Downloadables/Constitution.pdf" download><span style="margin-right: 5px;color: dodgerblue;">Download Constitution</span><i class="fas fa-file"></i></a></p>
+                        <p class="float-right"><a style="color: white;" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/Downloadables/Constitution.pdf" download><span style="margin-right: 5px;color: dodgerblue;">Download Constitution</span><i class="fas fa-file"></i></a></p>
                     </div>
                 </div>
                 <div class="row lastBox">
@@ -422,7 +422,7 @@
             <div class="container footerBox">
                 <div class="row">
                     <div class="col-12 text-center footertext">
-                        <span><a class="footertext" style="text-decoration: none;" href="ConstitutionPage.html">About Us </a><span>|</span> <a class="footertext" style="text-decoration: none;" href="ContactUs.html">Contact Us</a></span>
+                        <span><a class="footertext" style="text-decoration: none;" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ConstitutionPage.html">About Us </a><span>|</span> <a class="footertext" style="text-decoration: none;" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ContactUs.html">Contact Us</a></span>
                     </div>
                 </div>
             </div>
