--- a/CopyFolder/ProjectsPage - Copy.html
+++ b/CopyFolder/ProjectsPage - Copy.html
@@ -11,33 +11,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="Images/ADGC_logo.png" />
     <link rel="h" type="image/x-icon" href="Images/ADGC_logo.png" />
-    <link rel="stylesheet" type="text/css" href="master.css">
-    <title>Events AGDC</title>
-    <!--Script Classes-->
-        <style>
-            .topButton {
-                display: none;
-                position: fixed;
-                bottom: 20px;
-                right: 30px;
-                z-index: 99;
-                font-size: 18px;
-                font-family: 'Open Sans', sans-serif;
-                font-weight: bold;
-                outline: none;
-                background-color: #cccccc;
-                color: black;
-                cursor: pointer;
-                padding: 15px;
-                border: 3px solid black;
-            }
+    <link rel="stylesheet" type="text/css" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/master.css">
+    <title>Projects AGDC</title>
+    <style>
 
-            .topButton:hover {
-                background-color:white;
-                border: 3px solid black;
-                color:  black;
-            }
-        </style>
+    </style>
+    <!--Script Classes-->
+    <style>
+        .topButton {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            right: 30px;
+            z-index: 99;
+            font-size: 18px;
+            font-family: 'Open Sans', sans-serif;
+            font-weight: bold;
+            outline: none;
+            background-color: #cccccc;
+            color: black;
+            cursor: pointer;
+            padding: 15px;
+            border: 3px solid black;
+        }
+
+        .topButton:hover {
+            background-color:white;
+            border: 3px solid black;
+            color:  black;
+        }
+    </style>
     <!--Script Classes-->
 </head>
 <body>
@@ -90,11 +93,11 @@
 </div>
 
 <div class="d-flex stay  navbarBack ">
-    <a class=" navColor" href="Homepage.html" style="text-decoration: none;">Home</a>
-    <a class=" navColor" href="EventsPage.html " style="text-decoration: none;">Events</a>
-    <a class=" navColor" href="ProjectsPage.html" style="text-decoration: none;">Projects</a>
-    <a class=" navColor" href="ConstitutionPage.html  " style="text-decoration: none;">Constitution</a>
-    <a class=" navColor flex-grow-1" href="ContactUs.html " style="text-decoration: none;">Contact Us</a>
+    <a class=" navColor" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/Homepage.html" style="text-decoration: none;">Home</a>
+    <a class=" navColor" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/EventsPage.html " style="text-decoration: none;">Events</a>
+    <a class=" navColor" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ProjectsPage.html" style="text-decoration: none;">Projects</a>
+    <a class=" navColor" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ConstitutionPage.html  " style="text-decoration: none;">Constitution</a>
+    <a class=" navColor flex-grow-1" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ContactUs.html " style="text-decoration: none;">Contact Us</a>
 
     <div class="container-fluid showSmall mobileNavBack m-0 p-0">
         <div class="row m-0 p-0">
@@ -106,14 +109,14 @@
                                 <i  class="fas fa-bars"></i>
                             </button>
                             <div class="dropdown-menu dropdownNav">
-                                <a class="dropdown-item itemNav" href="EventsPage.html">Events</a>
-                                <a class="dropdown-item itemNav" href="ProjectsPage.html">Projects</a>
-                                <a class="dropdown-item itemNav" href="ConstitutionPage.html">Constitution</a>
-                                <a class="dropdown-item itemNav" href="ContactUs.html">Contact Us</a>
+                                <a class="dropdown-item itemNav" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/EventsPage.html">Events</a>
+                                <a class="dropdown-item itemNav" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ProjectsPage.html">Projects</a>
+                                <a class="dropdown-item itemNav" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ConstitutionPage.html">Constitution</a>
+                                <a class="dropdown-item itemNav" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ContactUs.html">Contact Us</a>
                             </div>
                         </div>
                         <div class="col-6 ">
-                            <a style="text-decoration: none;" href="Homepage.html"><i class="fa fa-home homeIcon"></i></a>
+                            <a style="text-decoration: none;" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/Homepage.html"><i class="fa fa-home homeIcon"></i></a>
                         </div>
                     </div>
                 </div>
@@ -129,25 +132,13 @@
 <div class="container-fluid background-box">
     <div class="row">
         <div class="col-12">
-            <div class=" container">
+            <div class=" container bodyBox">
                 <div class="row">
-                    <div class="col-12 bodyBox text-center EventTitle">
-                        <div class="messageBox">
-                            <h1><a style="text-decoration: none;" href="#events">AGDC Events</a></h1>
-                            <img class="img-fluid" src="Images/KentStateBackground.jpg">
-                        </div>
+                    <div class="col-12">
+                        <p class="title">Coming Soon!</p>
                     </div>
-                    <div class="col-12 bodyBox lastBox">
-                        <div class="messageBox">
-                            <ul> <h2>Fall Semester</h2>
-                                <li id="events"><a style="text-decoration: none;"  href="#GDEX">GDEX</a> (OCT 11TH-13TH, 2019) <a style="text-decoration: none;"href="https://www.thegdex.com/">   Official Site</a></li>
-                            </ul>
+                    <div class="col-12">
 
-                            <ul> <h2>Spring Semester</h2>
-                                <li><a style="text-decoration: none;" href="#GGJ">Global Game Jam </a> (JAN 31 - FEB 2, 2020)<a style="text-decoration: none;"href="https://globalgamejam.org/">   Official Site</a></li>
-                                <li><a style="text-decoration: none;" href="VEC">Vector</a> (APR 26-27, 2020) <a style="text-decoration: none;"href="http://vectorconf.com/">   Official Site</a></li>
-                            </ul>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -163,7 +154,7 @@
             <div class="container footerBox">
                 <div class="row">
                     <div class="col-12 text-center footertext">
-                        <span><a class="footertext" style="text-decoration: none;" href="ConstitutionPage.html">About Us </a><span>|</span> <a class="footertext" style="text-decoration: none;" href="ContactUs.html">Contact Us</a></span>
+                        <span><a class="footertext" style="text-decoration: none;" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ConstitutionPage.html">About Us </a><span>|</span> <a class="footertext" style="text-decoration: none;" href="../../../Documents/WebsiteGIT/Gandacksu/CopyFolder/ContactUs.html">Contact Us</a></span>
                     </div>
                 </div>
             </div>
