--- a/Homepage.html
+++ b/Homepage.html
@@ -6,43 +6,42 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <meta charset="utf-8">
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"></head>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="images/ADGC_logo.png" />
-    <link rel="h" type="image/x-icon" href="images/ADGC_logo.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="Images/ADGC_logo.png" />
+    <link rel="h" type="image/x-icon" href="Images/ADGC_logo.png" />
     <link rel="stylesheet" type="text/css" href="master.css">
     <title>Animation & Game Design Club</title>
     <style>
-        /*||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||*/
 
-        .background-box {
-            background-color: #0d0d0d;
-            height: auto;
+    </style>
+    <!--Script Classes-->
+    <style>
+        .topButton {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            right: 30px;
+            z-index: 99;
+            font-size: 18px;
+            font-family: 'Open Sans', sans-serif;
+            font-weight: bold;
+            outline: none;
+            background-color: #cccccc;
+            color: black;
+            cursor: pointer;
+            padding: 15px;
+            border: 3px solid black;
         }
-        .bodyBox {
-            background-color: #4d4d4d;
-            padding-top: 25px;
-            padding-left: 25px;
-            height: auto;
-            padding-right: 25px;
-        }
-        .lastBox {
-            padding-bottom: 25px;
-        }
-        .messageBox {
-            background-color: #2a2a2a;
-            padding: 25px;
-            border-radius: 8px;
-            color: white;
-            height: auto;
-        }
-        .EventTitle {
-            color: white;
+
+        .topButton:hover {
+            background-color:white;
+            border: 3px solid black;
+            color:  black;
         }
     </style>
+    <!--Script Classes-->
 </head>
 <body>
 
@@ -50,43 +49,43 @@
 <div class="container-fluid Header " >
     <div class="row">
         <div class="col-lg-1 hiddenMedium ">
-            <a href="http://gandacksu.com/"><img class="LogoBoxLeft" src="images/ADGC_logo.png"></a>
+            <a href="http://gandacksu.com/"><img class="LogoBoxLeft" src="Images/ADGC_logo.png"></a>
         </div>
         <div class="col-lg-6 hiddenMedium ">
             <p class="title">ANIMATION & GAME DESIGN CLUB</p>
         </div>
         <div class="col-lg-4 hiddenMedium">
-            <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fgroups%2FKSU4MAGC%2F"><img class="img-fluid iconImage" src="images/facebookIcon.png"></a>
-            <a href=" mailto: KSUCLUB4MAGC@gmail.com"> <img class="img-fluid iconImage" src="images/googleIcon.png"></a>
-            <a href="https://www.instagram.com/agdc_ksu/"><img class="img-fluid iconImage" src="images/instagramIcon.png"></a>
-            <a href="https://twitter.com/@agdc_ksu"> <img class="img-fluid iconImage" src="images/twitterIcon.png"></a>
+            <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fgroups%2FKSU4MAGC%2F"><img class="img-fluid iconImage" src="Images/facebookIcon.png"></a>
+            <a href=" mailto: KSUCLUB4MAGC@gmail.com"> <img class="img-fluid iconImage" src="Images/googleIcon.png"></a>
+            <a href="https://www.instagram.com/agdc_ksu/"><img class="img-fluid iconImage" src="Images/instagramIcon.png"></a>
+            <a href="https://twitter.com/@agdc_ksu"> <img class="img-fluid iconImage" src="Images/twitterIcon.png"></a>
         </div>
         <div class="col-lg-1 hiddenMedium ">
-            <a href="https://www.kent.edu/"><img class="LogoBoxRight" src="images/1200px-Kent_State_seal.svg%20(1).png"></a>
+            <a href="https://www.kent.edu/"><img class="LogoBoxRight" src="Images/1200px-Kent_State_seal.svg%20(1).png"></a>
         </div>
         <div class="col-4 showMedium ">
-            <a href="http://gandacksu.com/"><img class="LogoBoxLeft" src="images/ADGC_logo.png"></a>
+            <a href="http://gandacksu.com/"><img class="LogoBoxLeft" src="Images/ADGC_logo.png"></a>
         </div>
         <div class="col-8 showMedium">
-            <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fgroups%2FKSU4MAGC%2F"><img class="img-fluid iconImage" src="images/facebookIcon.png"></a>
-            <a href=" mailto: KSUCLUB4MAGC@gmail.com"> <img class="img-fluid iconImage" src="images/googleIcon.png"></a>
-            <a href="https://www.instagram.com/agdc_ksu/"><img class="img-fluid iconImage" src="images/instagramIcon.png"></a>
-            <a href="https://twitter.com/@agdc_ksu"> <img class="img-fluid iconImage" src="images/twitterIcon.png"></a>
+            <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fgroups%2FKSU4MAGC%2F"><img class="img-fluid iconImage" src="Images/facebookIcon.png"></a>
+            <a href=" mailto: KSUCLUB4MAGC@gmail.com"> <img class="img-fluid iconImage" src="Images/googleIcon.png"></a>
+            <a href="https://www.instagram.com/agdc_ksu/"><img class="img-fluid iconImage" src="Images/instagramIcon.png"></a>
+            <a href="https://twitter.com/@agdc_ksu"> <img class="img-fluid iconImage" src="Images/twitterIcon.png"></a>
         </div>
 
         <div class="col-4 showSmall ">
-            <a href="http://gandacksu.com/"><img class="LogoBoxLeft" src="images/ADGC_logo.png"></a>
+            <a href="http://gandacksu.com/"><img class="LogoBoxLeft" src="Images/ADGC_logo.png"></a>
         </div>
         <div class="col-8 showSmall">
             <div class="container m-0 p-0">
                 <div class="row m-0 p-0">
                     <div class="col-12 m-0 p-0">
-                        <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fgroups%2FKSU4MAGC%2F"><img class="img-fluid iconImage" src="images/facebookIcon.png"></a>
-                        <a href=" mailto: KSUCLUB4MAGC@gmail.com"> <img class="img-fluid iconImage" src="images/googleIcon.png"></a>
+                        <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fgroups%2FKSU4MAGC%2F"><img class="img-fluid iconImage" src="Images/facebookIcon.png"></a>
+                        <a href=" mailto: KSUCLUB4MAGC@gmail.com"> <img class="img-fluid iconImage" src="Images/googleIcon.png"></a>
                     </div>
                     <div class="col-12 m-0 p-0">
-                        <a href="https://www.instagram.com/agdc_ksu/"><img class="img-fluid iconImage" src="images/instagramIcon.png"></a>
-                        <a href="https://twitter.com/@agdc_ksu"> <img class="img-fluid iconImage" src="images/twitterIcon.png"></a>
+                        <a href="https://www.instagram.com/agdc_ksu/"><img class="img-fluid iconImage" src="Images/instagramIcon.png"></a>
+                        <a href="https://twitter.com/@agdc_ksu"> <img class="img-fluid iconImage" src="Images/twitterIcon.png"></a>
                     </div>
                 </div>
             </div>
@@ -128,6 +127,7 @@
 
 </div>
 
+
 <!--||||||||||||||||||||||||||||||||||||||||||||||||||||||HEADER |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
 
 <div class="container-fluid background-box">
@@ -149,7 +149,7 @@
                             <div class="col-12 messageBox">
                                 <div class=" text-center EventTitle">
                                     <h1><a style="text-decoration: none;" href="#register">REGISTER:</a></h1>
-                                    <img class="img-fluid justify-content-center" src="images/ggj20_news_708x432px.jpg">
+                                    <img class="img-fluid justify-content-center" src="Images/ggj20_news_708x432px.jpg">
                                 </div>
                                 <div style="margin-top: 30px;" class="row">
                                     <div class="col-12  text-center">
@@ -187,6 +187,27 @@
     </div>
 </div>
 <!--|||||||||||||||||||||||||||||||||||||||FOOOTER||||||||||||||||||||||||||||||||||||||||||||||||||-->
+<button class="topButton" onclick="topFunction()" class="topButton" id="myBtn" title="Go to top">Back to Top</button>
+<script>
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function () {
+        scrollFunction()
+    };
+
+    function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+            document.getElementById("myBtn").style.display = "block";
+        } else {
+            document.getElementById("myBtn").style.display = "none";
+        }
+    }
+
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+    }
+</script>
 
 </body>
 </html>
