--- a/ProjectsPage.html
+++ b/ProjectsPage.html
@@ -13,7 +13,100 @@
     <link rel="h" type="image/x-icon" href="Images/ADGC_logo.png" />
     <link rel="stylesheet" type="text/css" href="master.css">
     <title>Projects AGDC</title>
+    <style>
+        .cardContainer {
+            max-width: 200px;
+            min-width: 150px;
+            height: 400px;
+            margin-bottom: 25px;
+        }
+        .cardBox {
+            background-color: #666666;
+        }
+        .cardTextTitle {
+            text-align: center;
+            font-size: 20px;
+            background-color: #cccccc;
+            color: #0d0d0d;
+            font-weight: bolder;
+            letter-spacing: 0px;
+        }
+        .cardText {
+            /*letter-spacing: .2px;*/
+            background-color: #666666;
+            color: white;
+            text-align: center;
+            font-weight: bolder;
+        }
+        .cardBody {
+            border: 0px;
+            margin: 0px;
+            padding: 0px;
+        }
+        .searchBar {
+            width: 100%;
+            text-align: center;
+            background-color:darkblue;
+            border-radius: 10px;
+            height: auto;
+            border: 3px solid yellow;
+            font-size: 20px;
+            font-weight: bolder;
+            color:yellow;
+            cursor: pointer;
+            margin-bottom: 5px;
+            margin-top: 5px;
+            padding: 10px;
+            transition-duration:.2s;
+        }
+        .searchBar:hover {
+            border: 4px solid white;
+        }
+        .gameBox {
+            /*margin: 5px;*/
+            padding: 5px;
+            display: block;
+            background-color: inherit;
+            height: auto;
 
+        }
+        .buttonMenu {
+            text-align: center;
+            background-color:#d9d9d9;
+            border-radius: 10px;
+            height: auto;
+            border: 3px solid black;
+            font-size: 15px;
+            font-weight: bolder;
+            color:black;
+            cursor: pointer;
+
+            padding: 5px;
+            transition-duration:.2s;
+        }
+        .buttonMenuA {
+            text-align: center;
+            background-color: #0d0d0d;
+            border-radius: 10px;
+            height: auto;
+            border: 3px solid #d9d9d9;
+            font-size: 15px;
+            font-weight: bolder;
+            color:#d9d9d9;
+            cursor: pointer;
+            padding: 5px;
+            transition-duration:.2s;
+        }
+        .Unity {
+            display: none;
+        }
+        .GameMaker {
+            display: none;
+        }
+        .Unreal {
+            display: none;
+        }
+    </style>
     <!--Script Classes-->
     <style>
         .topButton {
@@ -47,22 +140,7 @@
 <!--||||||||||||||||||||||||||||||||||||||||||||||||||||||HEADER |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
 
 
-<div class="container-fluid background-box">
-    <div class="row">
-        <div class="col-12">
-            <div class=" container bodyBox">
-                <div class="row">
-                    <div class="col-12">
-                        <p class="title">Coming Soon!</p>
-                    </div>
-                    <div class="col-12">
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<div id="Projects"></div>
 
 
 <!--|||||||||||||||||||||||||||||||||||||||FOOOTER||||||||||||||||||||||||||||||||||||||||||||||||||-->
@@ -70,12 +148,146 @@
 <!--|||||||||||||||||||||||||||||||||||||||FOOOTER||||||||||||||||||||||||||||||||||||||||||||||||||-->
 <script src="js/Header.js"></script>
 <script src="js/Footer.js"></script>
+<script src="js/Projects.js"></script>
 <script>
+
     // codeBlock  = '<div>Hello World!!!</div>';
+    document.getElementById("Projects").innerHTML = ProjectBlock;
     document.getElementById("Header").innerHTML = HeaderBlock;
     document.getElementById("Footer").innerHTML = FooterBlock;
 </script>
 <button  class="topButton" onclick="topFunction()" class="topButton" id="myBtn" title="Go to top">Back to Top</button>
+<script>
+    $( document ).ready(function() {
+        twine = true;
+        gamemaker = true;
+        unity = true;
+        unreal = false;
+        $( "#Search" ).trigger( "click" );
+        $( "#activeUnity" ).trigger( "click" );
+        $( "#activeTwine" ).trigger( "click" );
+        $( "#activeGameMaker" ).trigger( "click" );
+    });
+
+    twine = false;
+    gamemaker = false;
+    unity = false;
+    unreal = false;
+    twine = false;
+
+    arrayGames =[];
+    // arrayGames.push(game = {id:"n", title:"n", ImgSrc:"n", link: "n"});
+    game = {id:"m", title:"m", ImgSrc:"m", link: "m"};
+    game[1] = {id:"GameMaker Studio 2.0", title:"Fitting In", ImgSrc:"Images/title_0.jpg", link: "https://globalgamejam.org/2019/games/fitting"};
+    game[2] = {id:"GameMaker Studio 2.0", title:"Cuttle Ops", ImgSrc:"Images/chuchutitlecard.png", link: "https://globalgamejam.org/2019/games/cuttle-ops"};
+    game[3] = {id:"GameMaker Studio 2.0", title:"Slav Speeder", ImgSrc:"Images/game_box.png", link: "https://globalgamejam.org/2019/games/slav-speeder"};
+    game[4] = {id:"Twine", title:"Going Home", ImgSrc:"Images/going_home_cropped_1_0.png", link: "https://globalgamejam.org/2019/games/going-home"};
+    game[5] = {id:"Unity", title:"Talanoa", ImgSrc:"Images/title_screen.png", link: "https://globalgamejam.org/2019/games/talanoa"};
+    game[6] = {id:"Unity", title:"Away From Home", ImgSrc:"Images/start_menu.png", link: "https://globalgamejam.org/2019/games/away-home-0"};
+    game[7] = {id:"Unity", title:"Woodcutter Adventure", ImgSrc:"Images/woodcutter_adventure_screenshot.png", link: "https://globalgamejam.org/2019/games/woodcutter-adventure"};
+
+    gameBlock = '<div class="col-lg-4 col-md-6 col-sm-12 gameBox">\n' +
+        '                                                    <div class="card cardBox">\n' +
+        '                                                        <div class="card-header cardTextTitle">';
+
+    block2 = '</div>\n' +
+        '                                                        <div class="card-footer cardText">';
+
+    block3 = '</div>\n' +
+        '                                                        <div class="card-body cardBody">\n' +
+        '                                                            <img class="img-fluid" src="';
+
+    block4 = '">\n' +
+        '                                                        </div>\n' +
+        '                                                        <div class="card-footer cardText"><a href="';
+
+
+    block5 = '">Download/ More Information</a></div>\n' +
+        '                                                    </div>\n' +
+        '                                                </div>';
+
+    $( "#activeUnity" ).click(function() {
+        if ($("#activeUnity").hasClass("buttonMenu") == true) {
+            $( "#activeUnity" ).addClass('buttonMenuA');
+            $( "#activeUnity" ).removeClass('buttonMenu');
+            unity = true;
+        }else if ($("#activeUnity").hasClass("buttonMenuA") == true) {
+            $( "#activeUnity" ).addClass('buttonMenu');
+            $( "#activeUnity" ).removeClass('buttonMenuA');
+            unity = false;
+        }
+    });
+
+    $( "#activeUnreal" ).click(function() {
+        if ($("#activeUnreal").hasClass("buttonMenu") == true) {
+            $( "#activeUnreal" ).addClass('buttonMenuA');
+            $( "#activeUnreal" ).removeClass('buttonMenu');
+            unreal = true;
+        }else if ($("#activeUnreal").hasClass("buttonMenuA") == true) {
+            $( "#activeUnreal" ).addClass('buttonMenu');
+            $( "#activeUnreal" ).removeClass('buttonMenuA');
+            unreal = false;
+        }
+    });
+
+    $( "#activeTwine" ).click(function() {
+        if ($("#activeTwine").hasClass("buttonMenu") == true) {
+            $( "#activeTwine" ).addClass('buttonMenuA');
+            $( "#activeTwine" ).removeClass('buttonMenu');
+            twine = true;
+        }else if ($("#activeTwine").hasClass("buttonMenuA") == true) {
+            $( "#activeTwine" ).addClass('buttonMenu');
+            $( "#activeTwine" ).removeClass('buttonMenuA');
+            twine = false;
+        }
+    });
+
+    $( "#activeGameMaker" ).click(function() {
+        if ($("#activeGameMaker").hasClass("buttonMenu") == true) {
+            $( "#activeGameMaker" ).addClass('buttonMenuA');
+            $( "#activeGameMaker" ).removeClass('buttonMenu');
+            gamemaker = true;
+        }else if ($("#activeGameMaker").hasClass("buttonMenuA") == true) {
+            $( "#activeGameMaker" ).addClass('buttonMenu');
+            $( "#activeGameMaker" ).removeClass('buttonMenuA');
+            gamemaker = false;
+        }
+    });
+
+    $( "#Search" ).click(function() {
+        result = '';
+        document.getElementById('results').innerHTML = result;
+        if (unity === true) {
+            for (var i = 1; i < 8; i++) {
+                if (game[i].id === "Unity") {
+                    result = result + gameBlock + game[i].title + block2 + game[i].id + block3 + game[i].ImgSrc + block4 + game[i].link + block5;
+                }
+            }
+        }
+        if (twine === true) {
+            for (var i = 1; i < 8; i++) {
+                if (game[i].id === "Twine") {
+                    result = result + gameBlock + game[i].title + block2 + game[i].id + block3 + game[i].ImgSrc + block4 + game[i].link + block5;
+                }
+            }
+        }
+        if (gamemaker === true) {
+            for (var i = 1; i < 8; i++) {
+                if (game[i].id === "GameMaker Studio 2.0") {
+                    result = result + gameBlock + game[i].title + block2 + game[i].id + block3 + game[i].ImgSrc + block4 + game[i].link + block5;
+                }
+            }
+        }
+        if (unreal === true) {
+            for (var i = 1; i < 8; i++) {
+                if (game[i].id === "Unreal") {
+                    result = result + gameBlock + game[i].title + block2 + game[i].id + block3 + game[i].ImgSrc + block4 + game[i].link + block5;
+                }
+            }
+        }
+        document.getElementById('results').innerHTML = result;
+    });
+</script>
 <script>
     // When the user scrolls down 20px from the top of the document, show the button
     window.onscroll = function () {
